--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -42,9 +42,10 @@ http {
     }
 
     server {
-        listen 443 ssl default_server;
-        ssl_certificate /etc/nginx/ssl/expiring.nginx.com.crt;
-        ssl_certificate_key /etc/nginx/ssl/expiring.nginx.com.key;	
+        listen 443;
+        #listen 443 ssl default_server;
+        #ssl_certificate /etc/nginx/ssl/expiring.nginx.com.crt;
+        #ssl_certificate_key /etc/nginx/ssl/expiring.nginx.com.key;	
     }
 
     server {
