--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Gitops Demo
+#
 user  nginx;
 worker_processes  auto;
 
@@ -30,6 +30,7 @@ http {
 
     proxy_cache_path /data/nginx/cache_backend1 keys_zone=cache_backend1:10m;
     proxy_cache_path /data/nginx/cache_backend2 keys_zone=cache_backend2:10m;
+    proxy_buffering off;
  
     #gzip  on;
     server {
@@ -42,13 +43,36 @@ http {
     }
 
     server {
-        listen 443;
-        #listen 443 ssl default_server;
-        #ssl_certificate /etc/nginx/ssl/expiring.nginx.com.crt;
-        #ssl_certificate_key /etc/nginx/ssl/expiring.nginx.com.key;	
+        
+        listen 443 ssl default_server;
+        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
+        ssl_certificate /etc/nginx/ssl/test.crt;
+        ssl_certificate_key /etc/nginx/ssl/test.key;	
     }
 
     server {
+        listen 8443 ssl default_server;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:3DES:!aNULL:!eNULL:!ADH:HIGH;        
+        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
+    }
+
+    server {
+    #listen 99;
+    listen 8438 ssl;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH;        
+    ssl_certificate /etc/nginx/ssl/expired.crt;
+    ssl_certificate_key /etc/nginx/ssl/expired.key;	
+}
+
+
+
+
+    server {
+        server_name my_server;
         listen 9091;
         return 200 "Greetings. hello from http workload 1 \n";
     }     
