--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -44,32 +44,31 @@ http {
 
     server {
         
-        listen 443 ssl default_server;
-        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/test.crt;
-        ssl_certificate_key /etc/nginx/ssl/test.key;	
+        listen 443;
+        #listen 443 ssl default_server;
+        #ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+        #ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
+        #ssl_certificate /etc/nginx/ssl/test.crt;
+        #ssl_certificate_key /etc/nginx/ssl/test.key;	
     }
 
     server {
-        listen 8443 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:3DES:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
+        listen 8443;
+        #listen 8443 ssl default_server;
+        #ssl_protocols TLSv1.2 TLSv1.3;
+        #ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:3DES:!aNULL:!eNULL:!ADH:HIGH;        
+        #ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
+        #ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
     }
 
     server {
-    #listen 99;
-    listen 8438 ssl;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH;        
-    ssl_certificate /etc/nginx/ssl/expired.crt;
-    ssl_certificate_key /etc/nginx/ssl/expired.key;	
-}
-
-
-
+        listen 8438;
+        #listen 8438 ssl;
+        #ssl_protocols TLSv1.2 TLSv1.3;
+        #ssl_ciphers HIGH;        
+        #ssl_certificate /etc/nginx/ssl/expired.crt;
+        #ssl_certificate_key /etc/nginx/ssl/expired.key;	
+    }
 
     server {
         server_name my_server;
