--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -32,11 +32,11 @@ jobs:
 
       - name: Set environment variable for base64 encoded config files
         run: |
-          echo "NGINX_CONF_CONFIG_FILE=`echo \# Modified by NGINX One API $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-01/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
-          echo "MIME_TYPES_CONFIG_FILE=`cat app-nyc-01/etc/nginx/mime.types | base64 -w 0`" >> $GITHUB_ENV
-          echo "DEFAULT_CONF_CONFIG_FILE=`cat app-nyc-01/etc/nginx/conf.d/default.conf | base64 -w 0`" >> $GITHUB_ENV
-          echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
-          echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
+          #echo "NGINX_CONF_CONFIG_FILE=`echo \# Modified by NGINX One API $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-01/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
+          #echo "MIME_TYPES_CONFIG_FILE=`cat app-nyc-01/etc/nginx/mime.types | base64 -w 0`" >> $GITHUB_ENV
+          #echo "DEFAULT_CONF_CONFIG_FILE=`cat app-nyc-01/etc/nginx/conf.d/default.conf | base64 -w 0`" >> $GITHUB_ENV
+          #echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
+          #echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
           echo "NGINX_ONE_CONFIG_JSON_BLOB=`cat app-nyc-01/nginx_one_config_json_blob | base64 -w 0`" >> $GITHUB_ENV
 
       - name: API call to get instance list from NGINX One Saas Console
