--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -33,11 +33,13 @@ jobs:
       - name: Set environment variable for base64 encoded config files
         run: |
           echo "NGINX_CONF_CONFIG_FILE=`echo \# Modified by https://github.com/bwolmarans/GitOps-NGINX-One $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-01/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
+          echo "NGINX_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-01/etc/nginx/nginx.conf`" >> $GITHUB_ENV
           echo "MIME_TYPES_CONFIG_FILE=`cat app-nyc-01/etc/nginx/mime.types | base64 -w 0`" >> $GITHUB_ENV
           echo "DEFAULT_CONF_CONFIG_FILE=`cat app-nyc-01/etc/nginx/conf.d/default.conf | base64 -w 0`" >> $GITHUB_ENV
+          echo "DEFAULT_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-01/etc/nginx/conf.d/default.conf`" >> $GITHUB_ENV
           echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
           echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
 
       - name: PATCH the instance config
         run: |
-          curl -X PATCH --location 'https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/config' -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}' --data '{ "aux": [], "conf_path": "/etc/nginx/nginx.conf", "configs": [ { "files": [ { "contents": "${{ env.NGINX_CONF_CONFIG_FILE }}", "mtime": "1970-01-01T00:00:00Z", "name": "nginx.conf", "size": 1 } ], "name": "/etc/nginx" }, { "files": [ { "contents": "${{ env.DEFAULT_CONF_CONFIG_FILE }}", "mtime": "1970-01-01T00:00:00Z", "name": "default.conf", "size": 1 } ], "name": "/etc/nginx/conf.d" }], "object_id": "nc_Mw2aZnqkSkyB6g3dR6BdGw" }' -H "Content-Type: application/json"
+          curl -X PATCH --location 'https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/config' -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}' --data '{ "aux": [], "conf_path": "/etc/nginx/nginx.conf", "configs": [ { "files": [ { "contents": "${{ env.NGINX_CONF_CONFIG_FILE }}", "mtime": "1970-01-01T00:00:00Z", "name": "nginx.conf", "size": ${{ NGINX_CONF_CONFIG_FILE_SIZE }} } ], "name": "/etc/nginx" }, { "files": [ { "contents": "${{ env.DEFAULT_CONF_CONFIG_FILE }}", "mtime": "1970-01-01T00:00:00Z", "name": "default.conf", "size": ${{ DEFAULT_CONF_CONFIG_FILE_SIZE }} } ], "name": "/etc/nginx/conf.d" }] " }' -H "Content-Type: application/json"
