--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -1,4 +1,3 @@
-# comment added by brett in the file in the repo
 user  nginx;
 worker_processes  auto;
 
@@ -48,8 +47,8 @@ http {
         listen 443 ssl default_server;
         ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
         ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/cert-45-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-45-days.key;	
+        ssl_certificate /etc/nginx/ssl/cert-29-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-29-days.key;	
     }
 
     server {
@@ -125,7 +124,14 @@ http {
           allow 127.0.0.1;
           deny all;
        }
+    
+        location /api {
+            api write=on;
+            allow 127.0.0.1;
+            deny  all;
+        }
     }
+   
     include /etc/nginx/conf.d/*.conf;
 }
 
