--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -29,10 +29,13 @@ http {
 
     proxy_cache_path /data/nginx/cache_backend1 keys_zone=cache_backend1:10m;
     proxy_cache_path /data/nginx/cache_backend2 keys_zone=cache_backend2:10m;
+    
     proxy_buffering off;
  
-    #gzip  on;
+    #gzip on;
+
     server {
+        server_name api
         listen 127.0.0.1:8080;
         location /api {
             api write=on;
@@ -42,44 +45,44 @@ http {
     }
 
     server {
-        
-        #listen 443;
-        listen 443 ssl default_server;
+        listen 443 ssl;
         ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
+        ssl_ciphers !NULL:!LOW:!EXPORT:3DES:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
         ssl_certificate /etc/nginx/ssl/cert-29-days.crt;
         ssl_certificate_key /etc/nginx/ssl/cert-29-days.key;	
     }
 
     server {
-        #listen 8443;
+        server_name server2
         listen 8443 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:3DES:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
-    }
-
-    server {
-        #listen 8438;
-        listen 8438 ssl;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH;        
+        ssl_protocols TLSV1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
         ssl_certificate /etc/nginx/ssl/expired.crt;
         ssl_certificate_key /etc/nginx/ssl/expired.key;	
     }
 
     server {
+        server_name server3
+        listen 8438 ssl;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH;        
+        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
+    }
+
+    server {
         server_name my_server;
-        listen 9091;
+        listen 9091 default_server;
         return 200 "Greetings. hello from http workload 1 \n";
     }     
     server {
-        listen 9092;
+        server_name 9093
+        listen 9092 default_server;
         return 200 "hello from http workload 2 \n";
     }
     server {
-        listen 9093;
+        server_name 9093
+        listen 9093 default_server;
         return 200 "hello from stream workload 1 \n";
     }
  
@@ -97,27 +100,31 @@ http {
     }
  
     server {
+        server_name server99;
         status_zone my_frontend1;
-        listen 127.0.0.1:8081;
+        listen 127.0.0.1:8081 default_server;
         location /frontend1 {
             proxy_pass http://nginx1;
+            proxy_set_header Host $host;
             proxy_cache cache_backend1;
             status_zone my_location_zone;
 
         }
     }
     server {
+        server_name server7;
         status_zone my_frontend2;
-        listen 127.0.0.1:8082;
+        listen 127.0.0.1:8082 default_server;
         location /frontend2 {
             proxy_pass http://nginx2;
+            proxy_set_header Host $host;
             proxy_cache cache_backend2;
             status_zone my_location_zone;
 
         }
     }
     server {
-       listen 127.0.0.1:80;
+       listen 127.0.0.1:80 default_server;
        server_name 127.0.0.1;
        location /nginx_status {
           stub_status on;
