--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -51,7 +51,8 @@ jobs:
       
       - name: check publication status1
         run: |
-          curl -X GET https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}'
+          curl -X GET https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}' -o response
+          cat response
       
       - name: Sleep for 10 seconds
         run: sleep 10s
@@ -59,4 +60,5 @@ jobs:
       
       - name: check publication status2
         run: |
-          curl -X GET https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}'
+          curl -X GET https://nginxone-team.staging.volterra.us/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer ${{ secrets.XC_BEARER_TOKEN }}' -o response
+          cat response
