--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -1,4 +1,3 @@
-# some small change to the file
 user  nginx;
 worker_processes  auto;
 
@@ -31,7 +30,7 @@ http {
     proxy_cache_path /data/nginx/cache_backend1 keys_zone=cache_backend1:10m;
     proxy_cache_path /data/nginx/cache_backend2 keys_zone=cache_backend2:10m;
     
-    proxy_buffering off;
+    proxy_buffering on;
  
     #gzip on;
 
