--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -1,4 +1,4 @@
-name: Managing NGINX configs with Github and Github Actions
+name: NGINX One with Github and Github Actions
 
 # Controls when the workflow will run
 on:
