--- a/app-nyc-01/etc/nginx/nginx-clean.conf
+++ b/app-nyc-01/etc/nginx/nginx-clean.conf
@@ -58,8 +58,8 @@ http {
         listen 8443 ssl default_server;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/expired.crt;
-        ssl_certificate_key /etc/nginx/ssl/expired.key;	
+        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
     }
 
     server {
