--- a/app-nyc-01/etc/nginx/nginx.conf
+++ b/app-nyc-01/etc/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
     proxy_cache_path /data/nginx/cache_backend1 keys_zone=cache_backend1:10m;
     proxy_cache_path /data/nginx/cache_backend2 keys_zone=cache_backend2:10m;
     
-    proxy_buffering on;
+    proxy_buffering off;
  
     #gzip on;
 
@@ -45,21 +45,20 @@ http {
     }
 
     server {
-        server_name test456;
-        listen 443 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
+        listen 443 ssl;
+        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers !NULL:!LOW:!EXPORT:3DES:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
+        ssl_certificate /etc/nginx/ssl/cert-29-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-29-days.key;	
     }
 
     server {
         server_name server2
         listen 8443 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSV1.1 TLSv1.2 TLSv1.3;
         ssl_ciphers ALL:!NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;        
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;	
+        ssl_certificate /etc/nginx/ssl/expired.crt;
+        ssl_certificate_key /etc/nginx/ssl/expired.key;	
     }
 
     server {
