--- a/NGINXONE_POSTMAN_COLLECTION_6_1_24.json
+++ b/NGINXONE_POSTMAN_COLLECTION_6_1_24.json
@@ -5425,7 +5425,7 @@
 		},
 		{
 			"key": "instance_id",
-			"value": "inst__vjWzLe7Tt2129GfFzm0Mw",
+			"value": "inst__xxxxxxx",
 			"type": "string"
 		},
 		{
