--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user  nginx;
 
-## we are fixing things via Gitops 11/21/2024
+## we are fixing things via Gitops 12/4/2024 for the Team
  
 worker_processes  auto;
 
