--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user  nginx;
 
-## we are fixing things via Gitops 12/5/2024 for JD
+# we are fixing things via Gitops 12/5/2024 for JD
  
 worker_processes  auto;
 
