--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -1,8 +1,5 @@
 user  nginx;
 
-# gitops demo for KP
-
- 
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
@@ -34,26 +31,25 @@ http {
     proxy_cache_path /data/nginx/cache_backend1 keys_zone=cache_backend1:10m;
     proxy_cache_path /data/nginx/cache_backend2 keys_zone=cache_backend2:10m;
 
-    proxy_buffering on;
+    proxy_buffering off;
     #gzip on;
 
     server {
-        server_name adsfsd;
-        listen 443 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;
+        listen 443 ssl;
+        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:3DES:!aNULL:!eNULL:!ADH:HIGH;
+        ssl_certificate /etc/nginx/ssl/cert-10-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-10-days.key;
 
     }
 
     server {
         server_name test2;
         listen 4434 ssl default_server;
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
         ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;
+        ssl_certificate /etc/nginx/ssl/cert-45-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-45-days.key;
 
     }
 
@@ -62,8 +58,8 @@ http {
         listen 4438 ssl default_server;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers !NULL:!LOW:!EXPORT:!MD5:!aNULL:!eNULL:!ADH:HIGH;
-        ssl_certificate /etc/nginx/ssl/cert-300-days.crt;
-        ssl_certificate_key /etc/nginx/ssl/cert-300-days.key;
+        ssl_certificate /etc/nginx/ssl/cert-200-days.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert-200-days.key;
 
     }
     server {
@@ -166,3 +162,5 @@ stream {
         proxy_pass nginx3;
     }
 }
+
+
