--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -1,5 +1,10 @@
 user  nginx;
-#demo 1/14/2025
+
+########################
+#
+# Demo 1/14/2025
+#
+########################
 
 worker_processes  auto;
 
