--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: check publication status1
         run: |
           curl -X GET https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer APIToken ${{ secrets.XC_BEARER_TOKEN }}' -o response.json
-          cat response.json | jq -c .status
+          #cat response.json | jq -c .status
 
       - name: Sleep for 15 seconds
         run: sleep 15s
@@ -59,4 +59,4 @@ jobs:
       - name: check publication status2
         run: |
           curl -X GET https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances/${{ vars.N1SC_INSTANCE }}/publications/${{ env.PUBLICATION_ID }}  -H 'Authorization: Bearer APIToken ${{ secrets.XC_BEARER_TOKEN }}' -o response.json
-          cat response.json | jq -c .status
+          #cat response.json | jq -c .status
