--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -22,6 +22,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      
+      - name: debug env vars
+        run: |
+          echo "XC_BEARER_TOKEN=`echo -n "${{ secrets.XC_BEARER_TOKEN }}`"
+          echo "N1SC_INSTANCE ${{ vars.N1SC_INSTANCE }}"
+          echo "N1SC_HOSTNAME ${{ vars.N1SC_HOSTNAME }}"
             
       - name: Set misc environment variables 
         run: |
