--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -48,8 +48,7 @@ jobs:
 
       - name: List instances 
         run: |
-          #response = $(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances')
-          response="hello"
+          response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances')
           echo "$response"
 
       - name: PATCH the instance config
