--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -50,6 +50,9 @@ jobs:
         run: |
           response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances'  -H 'Authorization: Bearer APIToken fail')
           echo "$response"
+          if: contains("nvalid", $response)
+          run: echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
+          
 
       - name: PATCH the instance config
         run: |
