--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -46,12 +46,13 @@ jobs:
           echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
           echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
 
-      - name: List instances 
+      - name: List instances
         run: |
-          response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances'  -H 'Authorization: Bearer APIToken fail')
-          echo "$response"
-          if: contains("nvalid", $response)
-          run: echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
+          response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances'  -H 'Authorization: Bearer APIToken fail'); echo "response=$response" >> $GITHUB_OUTPUT
+
+      - name: Check if auth worked
+        run: echo "Response: ${{ steps.req.outputs.response }}"
+        run: echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
           
 
       - name: PATCH the instance config
