--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -47,12 +47,14 @@ jobs:
           echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
 
       - name: List instances
+        id: list_instances
         run: |
           response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances'  -H 'Authorization: Bearer APIToken fail'); echo "response=$response" >> $GITHUB_OUTPUT
 
       - name: Check if auth worked
-        run: echo "Response: ${{ steps.req.outputs.response }}"
-        run: echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
+        run: |
+          echo "Response: ${{ steps.list_instances.outputs.response }}"
+          echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
           
 
       - name: PATCH the instance config
