--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -54,7 +54,8 @@ jobs:
       - name: Check if auth worked
         run: |
           echo "Response: ${{ steps.list_instances.outputs.response }}"
-          echo "***Auth failed - suggestion: check your XC Bearer Token matches your Tenant ***"
+          if: contains(${{ steps.list_instances.outputs.response }}, "nvalid")
+          run: echo "***Auth failed - suggestion: check your XC Bearer Token has not expired, and you are using the right token for your Tenant ***"
           
 
       - name: PATCH the instance config
