--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -55,7 +55,7 @@ jobs:
           echo "---------------------------------------------------------------------------------------"
           echo "---------------------------------------------------------------------------------------"
           
-          echo contains(${{ steps.list_instances.outputs.response }}, 'nvalid')
+          echo contains($response, 'nvalid')
           echo "---------------------------------------------------------------------------------------"
           echo "---------------------------------------------------------------------------------------"
           echo "---------------------------------------------------------------------------------------"
