--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -60,14 +60,14 @@ jobs:
           echo "---------------------------------------------------------------------------------------"
           if: contains('Hello World', 'Hello')
           run: echo "The string contains 'Hello'!"
-          
-          if: contains($response, 'nvalid')
+          echo "---------------------------------------------------------------------------------------"
+          echo "---------------------------------------------------------------------------------------"
+          echo "---------------------------------------------------------------------------------------"
+          if: contains(fromJSON($response), 'nvalid')
           run: echo "The string contains 'Hello'!"
-          
           echo "---------------------------------------------------------------------------------------"
           echo "---------------------------------------------------------------------------------------"
           echo "---------------------------------------------------------------------------------------"
-          #fromJSON
           
       - name: Check if auth worked
         if: contains(${{ steps.list_instances.outputs.response }}, 'nvalid')
