--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -59,7 +59,7 @@ jobs:
           echo "---------------------------------------------------------------------------------------"
       
       - name: blah
-        if: contains(fromJSON(${{ steps.list_instances.outputs.response }}), 'nvalid')
+        if: contains(fromJSON(${{ steps.list_instances.outputs.response }}), 'xxxxxxxxxxxxx')
         run: echo "The string contains 'Hello'!"
 
       - name: Check if auth worked
